overlap ducttape fix

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,5 @@
 html, body {
 /*please bear with the mess, I am learning*/
-  	height:100%;
-  	width:100%;
   	font-size:100%;
   	background-color: #3e3c4c;
 	color:#efcf95;
@@ -12,10 +10,10 @@ html, body {
 
 h1 {
   	line-height:120%;
-  	font-size: 200%;
-  	letter-spacing:26px;
-  	margin-bottom:10px;
-	margin-top:0px;
+  	font-size: 160%;
+  	letter-spacing:30px;
+  	margin-top:5px;
+	margin-bottom:0px;
 }
 
 h3 {
@@ -55,31 +53,36 @@ a:visited {
   	/*background-color: pink;*/
 	position: absolute; 
   	left: 20%; 
-  	top: 9%; 
+  	top: 10%; 
   	right: 20%; 
-  	bottom: 8%;
+  	bottom: 10%;
+	vertical-align:center;
 }
 
 .text {
+  	font-size: 100%;
+	/*background-color:blue;*/
+}
+
+.top {
   	font-size: 100%;
 }
 
 .heading {
   	font-size: 120%;
 	height: 125px;
-	vertical align:center;
-	/*background-color:pink;*/
+	overflow:hidden;
+	overflow-x:hidden;
 
 }
 
 .image {	
 	width:124 px;
-	display:inline;
-	float:left;
 	text-align: left;
 	margin-right: 10px;
 	border-right: 3px solid;
 	border-right-color: #efcf95;
+
 }
 
 
